ch03/kustomize-installation/resources/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   ingress.kubernetes.io/proxy-body-size: 100M
  #   ingress.kubernetes.io/app-root: "/"
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  #   cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/argocd"
        backend:
          service:
            name: argocd-server
            port:
              number: 80
# spec:
#   tls:
#   - hosts:
#     - boriphuth.trueddns.com
#     secretName: argocd-secret
#   rules:
#   - host: localhost
#     http:
#       paths:
#       - path: "/argocd"
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: http
